# gtk-calc

./: CMakeLists.txt  consts.h  evaluetor.h  eventHandlers.h  main.cpp  operators.h  store.h  utils.h
